syntax = "proto3";

import "SkaiMsgType.proto";

message PoseMsg {
    SkaiMsgType msg_type_id = 2;
}